Completando los ejercicios de la semana 4